--- a/css/propriedade-01/propriedade-01.css
+++ b/css/propriedade-01/propriedade-01.css
@@ -8,7 +8,7 @@
     height: auto;
     background-color: #ccc;
     border-radius: 1rem;
-    border: 1px solid #F8F8F8;
+    border: 1px solid #f8f8f8;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -17,7 +17,7 @@
     font-size: 2rem;
     padding: 1rem;
     font-weight: bold;
-    border-bottom: 0.1rem solid #F8F8F8;
+    border-bottom: 0.1rem solid #f8f8f8;
     background-color: #424242;
     border-radius: 1rem 1rem 0 0;
     color: white;
@@ -25,8 +25,38 @@
 
 .corpo {
     padding: 0.5rem 1rem;
+    text-align: justify;
+    line-height: 1.5rem;
+    font-family: "Segoe UI", sans-serif;
+
+    a {
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: #4CAF50;
+    }
+}
+
+.corpo::first-letter {
+    padding-left: 2rem;
 }
 
 .rodape {
+    text-align: right;
+    padding: 0.5rem;
+    font-style: italic;
+    border-top: 0.1rem solid #f8f8f8;
+}
 
+button {
+    padding: 0.5rem 1rem;
+    margin: 0 0.2rem;
+    border: none;
+    border-radius: 0.3rem;
+}
+
+button:hover {
+    background-color: white;
+    font-weight: bold;
 }
