--- a/angular/hello-world/src/app/data-binding/event-binding/event-binding.component.html
+++ b/angular/hello-world/src/app/data-binding/event-binding/event-binding.component.html
@@ -1,3 +1,3 @@
 <p>{{ message }}</p>
 
-<button (click)="changeMessage()" (mouseout)="returnToDefaultMessage()">Altera o texto</button>
+<button (click)="changeMessage()" (dblclick)="returnToDefaultMessage()">Altera o texto</button>
