--- a/angular/hello-world/src/app/forms/reactive/reactive/reactive.component.html
+++ b/angular/hello-world/src/app/forms/reactive/reactive/reactive.component.html
@@ -16,5 +16,9 @@
   </div>
 
   <br>
+
+  <label for="password">Password:</label>
+  <input formControlName="password" id="password" name="password" type="password"/>
+  <br>
   <button [disabled]="form.invalid" type="submit">Enviar</button>
 </form>
