--- a/angular/hello-world/src/app/forms/template-driven/template-driven.component.html
+++ b/angular/hello-world/src/app/forms/template-driven/template-driven.component.html
@@ -1,4 +1,4 @@
 <label for="name">Nome: </label>
-<input [(ngModel)]="name" id="name" name="name" type="text">
+<input [(ngModel)]="person.name" id="name" name="name" type="text">
 
-{{ name }}
+{{ person.name }}
