--- a/angular/hello-world/src/app/forms/reactive/reactive-form-builder/reactive-form-builder.component.html
+++ b/angular/hello-world/src/app/forms/reactive/reactive-form-builder/reactive-form-builder.component.html
@@ -2,12 +2,12 @@
   <input formControlName="nome" placeholder="Nome"/>
   <input formControlName="email" placeholder="Email"/>
   <input formControlName="senha" placeholder="Senha" type="password"/>
-  <button [disabled]="form.invalid" type="submit">Enviar</button>
-
 
   <label for="status">Status</label>
   <select formControlName="status" id="status" name="status">
     <option value="1">Ativo</option>
     <option value="0">Inativo</option>
   </select>
+
+  <button (click)="onSubmit()" [disabled]="form.invalid" type="submit">Enviar</button>
 </form>
