--- a/angular/hello-world/src/app/app.component.html
+++ b/angular/hello-world/src/app/app.component.html
@@ -1,1 +1,11 @@
-<app-reactive-form-builder></app-reactive-form-builder>
+<nav>
+  <dl>
+    <dt>Data Binding</dt>
+    <dd><a routerLink="event_binding">Event binding</a></dd>
+    <dd><a routerLink="interpolation">Interpolation</a></dd>
+    <dd><a routerLink="property_binding">PropertyBindingComponent</a></dd>
+    <dd><a routerLink="atribute">AtributeComponent</a></dd>
+  </dl>
+</nav>
+
+<router-outlet></router-outlet>
