--- a/angular/hello-world/src/app/app.component.html
+++ b/angular/hello-world/src/app/app.component.html
@@ -1,1 +1,21 @@
-<app-reactive-form-builder></app-reactive-form-builder>
+<div class="container">
+  <nav>
+    <dl>
+      <dt>Data Binding</dt>
+      <dd><a routerLink="event_binding">Event binding</a></dd>
+      <dd><a routerLink="interpolation">Interpolation</a></dd>
+      <dd><a routerLink="property_binding">Property Binding</a></dd>
+      <dd><a routerLink="two_way_data_binding">Two Way Data Binding</a></dd>
+      <dd><a routerLink="reactive_form_builder">Reactive Form Builder</a></dd>
+      <dd><a routerLink="reactive">Reactive</a></dd>
+      <dd><a routerLink="template_driven">Template Driven</a></dd>
+      <dd><a routerLink="attribute">Attribute</a></dd>
+      <dd><a routerLink="am_I_old">Am I Old</a></dd>
+    </dl>
+  </nav>
+
+  <div>
+    <router-outlet></router-outlet>
+  </div>
+
+</div>
