--- a/angular/hello-world/src/app/app.component.html
+++ b/angular/hello-world/src/app/app.component.html
@@ -9,6 +9,15 @@
       <dd><a routerLink="diretive_attribute">Attributte</a></dd>
       <dd><a routerLink="am_i_old">Am I Old</a></dd>
 
+      <dt><a routerLink="pipes">Pipes</a></dt>
+
+      <dt>Angular Material</dt>
+      <dd><a routerLink="am_button">Presentation</a></dd>
+      <dd><a routerLink="am_datepicker">DatePicker</a></dd>
+      <dd><a routerLink="am_slider">Slider</a></dd>
+      <dd><a routerLink="am_form_field">Form Field</a></dd>
+      <dd><a routerLink="am_sidenav">Sidenav</a></dd>
+
     </dl>
   </nav>
 
