--- a/angular/hello-world/src/styles.css
+++ b/angular/hello-world/src/styles.css
@@ -4,3 +4,6 @@
 /*  text-decoration: none;*/
 /*  box-sizing: border-box;*/
 /*}*/
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
