--- a/angular/hello-world/src/app/app.component.html
+++ b/angular/hello-world/src/app/app.component.html
@@ -12,6 +12,15 @@
       <dd><a routerLink="template-driven">Template Driven</a></dd>
       <dd><a routerLink="attribute">Attribute</a></dd>
       <dd><a routerLink="am-i-old">Idade</a></dd>
+      <dd><a routerLink="pipes">Pipes</a></dd>
+      <dt>Angular Material</dt>
+      <dd><a routerLink="presentation">Presentation</a></dd>
+      <dd><a routerLink="date-picker">Date Picker</a></dd>
+      <dd><a routerLink="form-field">Form Field</a></dd>
+      <dd><a routerLink="slider">Slider</a></dd>
+      <dd><a routerLink="tree">Tree</a></dd>
+      <dd><a routerLink="dialog">Dialog</a></dd>
+
     </dl>
   </nav>
   <div>
