--- a/angular/hello-world/src/app/data-binding/event-binding/event-binding.component.html
+++ b/angular/hello-world/src/app/data-binding/event-binding/event-binding.component.html
@@ -1,3 +1,5 @@
 <p>{{ message }}</p>
 <button (click)="changeMessage()">Clique Aqui</button>
 <button (click)="returntoDefault()">Reverter</button>
+
+<button>{{ alterar }}</button>
