--- a/angular/hello-world/src/app/app.component.html
+++ b/angular/hello-world/src/app/app.component.html
@@ -10,7 +10,15 @@
       <dd><a routerLink="reactive">Reactive</a></dd>
       <dd><a routerLink="template_driven">Template Driven</a></dd>
       <dd><a routerLink="attribute">Attribute</a></dd>
-      <dd><a routerLink="am_I_old">Am I Old</a></dd>
+      <dd><a routerLink="am_i_old">Am I Old</a></dd>
+      <dd><a routerLink="pipes">Pipes</a></dd>
+      <dt>Angula-material</dt>
+      <dd><a routerLink="presentation">Presentation</a></dd>
+      <dd><a routerLink="datepicker">Date Picker</a></dd>
+      <dd><a routerLink="formfield">Form Field</a></dd>
+      <dd><a routerLink="slider">Slider</a></dd>
+      <dd><a routerLink="sidenav">Sidenav</a></dd>
+
     </dl>
   </nav>
 
