--- a/angular/hello-world/src/app/angular-material/form-field/form-field.component.html
+++ b/angular/hello-world/src/app/angular-material/form-field/form-field.component.html
@@ -1,7 +1,10 @@
 <mat-form-field>
   <mat-label>Input</mat-label>
-  <input matInput>
+  <input [(ngModel)]="nome" matInput>
 </mat-form-field>
+
+{{ nome }}
+
 <mat-form-field>
   <mat-label>Select</mat-label>
   <mat-select>
@@ -11,5 +14,5 @@
 </mat-form-field>
 <mat-form-field>
   <mat-label>Textarea</mat-label>
-  <textarea matInput></textarea>
+  <textarea (click)="alertar()" matInput></textarea>
 </mat-form-field>
