--- a/angular/hello-world/src/app/app.component.html
+++ b/angular/hello-world/src/app/app.component.html
@@ -12,11 +12,13 @@
       <dt><a routerLink="pipes">Pipes</a></dt>
 
       <dt>Angular Material</dt>
-      <dd><a routerLink="am_button">Presentation</a></dd>
       <dd><a routerLink="am_datepicker">DatePicker</a></dd>
       <dd><a routerLink="am_slider">Slider</a></dd>
       <dd><a routerLink="am_form_field">Form Field</a></dd>
       <dd><a routerLink="am_sidenav">Sidenav</a></dd>
+      <dd><a routerLink="am_button">ButtonComponent</a></dd>
+      <dd><a routerLink="am_toggles">TogglesComponent</a></dd>
+      <dd><a routerLink="am_tree">TreeComponent</a></dd>
 
     </dl>
   </nav>
