--- a/angular/hello-world/src/app/app.component.html
+++ b/angular/hello-world/src/app/app.component.html
@@ -1,29 +1,30 @@
-<div class="container">
-  <nav>
-    <dl>
-      <dt>Data Binding</dt>
-      <dd><a routerLink="event_binding">Event binding</a></dd>
-      <dd><a routerLink="interpolation">Interpolation</a></dd>
+<!--<div class="container">-->
+<!--  <nav>-->
+<!--    <dl>-->
+<!--      <dt>Data Binding</dt>-->
+<!--      <dd><a routerLink="event_binding">Event binding</a></dd>-->
+<!--      <dd><a routerLink="interpolation">Interpolation</a></dd>-->
 
-      <dt>Diretives</dt>
-      <dd><a routerLink="diretive_attribute">Attributte</a></dd>
-      <dd><a routerLink="am_i_old">Am I Old</a></dd>
+<!--      <dt>Diretives</dt>-->
+<!--      <dd><a routerLink="diretive_attribute">Attributte</a></dd>-->
+<!--      <dd><a routerLink="am_i_old">Am I Old</a></dd>-->
 
-      <dt><a routerLink="pipes">Pipes</a></dt>
+<!--      <dt><a routerLink="pipes">Pipes</a></dt>-->
 
-      <dt>Angular Material</dt>
-      <dd><a routerLink="am_datepicker">DatePicker</a></dd>
-      <dd><a routerLink="am_slider">Slider</a></dd>
-      <dd><a routerLink="am_form_field">Form Field</a></dd>
-      <dd><a routerLink="am_sidenav">Sidenav</a></dd>
-      <dd><a routerLink="am_button">ButtonComponent</a></dd>
-      <dd><a routerLink="am_toggles">TogglesComponent</a></dd>
-      <dd><a routerLink="am_tree">TreeComponent</a></dd>
+<!--      <dt>Angular Material</dt>-->
+<!--      <dd><a routerLink="am_datepicker">DatePicker</a></dd>-->
+<!--      <dd><a routerLink="am_slider">Slider</a></dd>-->
+<!--      <dd><a routerLink="am_form_field">Form Field</a></dd>-->
+<!--      <dd><a routerLink="am_sidenav">Sidenav</a></dd>-->
+<!--      <dd><a routerLink="am_button">ButtonComponent</a></dd>-->
+<!--      <dd><a routerLink="am_toggles">TogglesComponent</a></dd>-->
+<!--      <dd><a routerLink="am_tree">TreeComponent</a></dd>-->
+<!--      <dd><a routerLink="am_dialog">DialogComponent</a></dd>-->
+<!--    </dl>-->
+<!--  </nav>-->
 
-    </dl>
-  </nav>
-
-  <div>
-    <router-outlet></router-outlet>
-  </div>
-</div>
+<!--  <div>-->
+<!--    <router-outlet></router-outlet>-->
+<!--  </div>-->
+<!--</div>-->
+<app-layout></app-layout>
