--- a/angular/hello-world/src/app/angular-material/dialog/dialog-overview-example-dialog/dialog-overview-example-dialog.component.html
+++ b/angular/hello-world/src/app/angular-material/dialog/dialog-overview-example-dialog/dialog-overview-example-dialog.component.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
 <h2 mat-dialog-title>Hi {{ data.name }}</h2>
 <mat-dialog-content>
   <p>What's your favorite animal?</p>
@@ -15,8 +8,5 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button (click)="onNoClick()" mat-button>No Thanks</button>
-  <button [mat-dialog-close]="animal()" cdkFocusInitial mat-button>Ok</button>
+  <button [mat-dialog-close]="animal()" mat-button>Ok</button>
 </mat-dialog-actions>
-
-</body>
-</html>
