--- a/angular/hello-world/src/app/angular-material/slider/slider.component.css
+++ b/angular/hello-world/src/app/angular-material/slider/slider.component.css
@@ -1,3 +1,12 @@
 mat-slider {
   width: 50px;
 }
+
+.container {
+  background-color: #a50909;
+  border-radius: 2rem;
+  overflow: hidden;
+  width: 140px;
+  justify-content: center;
+  align-items: center;
+}
