--- a/angular/hello-world/src/app/angular-material/slider/slider.component.html
+++ b/angular/hello-world/src/app/angular-material/slider/slider.component.html
@@ -1,4 +1,6 @@
-<mat-slider max="100" min="10" step="10">
-  <input [(ngModel)]="nota" id="nota" matSliderThumb type="range" value="1">
-</mat-slider>
+<div class="container">
+  <mat-slider max="100" min="10" step="10">
+    <input [(ngModel)]="nota" id="nota" matSliderThumb type="range" value="1">
+  </mat-slider>
+</div>
 <p>Você Achou Nota {{ nota }}</p>
