--- a/angular/hello-world/src/app/app.component.html
+++ b/angular/hello-world/src/app/app.component.html
@@ -1,31 +1,2 @@
-<div class="container">
-  <nav>
-    <dl>
-      <dt>Data Binding</dt>
-      <dd><a routerLink="event_binding">Event Binding</a></dd>
-      <dd><a routerLink="interpolation">Interpolation</a></dd>
-      <dd><a routerLink="propety-binging">Propety-Binging</a></dd>
-      <dd><a routerLink="two-way-data-binding">Two-Way-Data-Binding</a></dd>
-      <dt>Forms</dt>
-      <dd><a routerLink="reactive">Reactive</a></dd>
-      <dd><a routerLink="reactive-form-builder">Reactive Form Builder</a></dd>
-      <dd><a routerLink="template-driven">Template Driven</a></dd>
-      <dd><a routerLink="attribute">Attribute</a></dd>
-      <dd><a routerLink="am-i-old">Idade</a></dd>
-      <dd><a routerLink="pipes">Pipes</a></dd>
-      <dt>Angular Material</dt>
-      <dd><a routerLink="presentation">Presentation</a></dd>
-      <dd><a routerLink="date-picker">Date Picker</a></dd>
-      <dd><a routerLink="form-field">Form Field</a></dd>
-      <dd><a routerLink="slider">Slider</a></dd>
-      <dd><a routerLink="tree">Tree</a></dd>
-      <dd><a routerLink="dialog">Dialog</a></dd>
-
-    </dl>
-  </nav>
-  <div>
-    <router-outlet></router-outlet>
-  </div>
-</div>
-
+<app-layout></app-layout>
 
