--- a/angular/hello-world/src/app/app.component.html
+++ b/angular/hello-world/src/app/app.component.html
@@ -18,6 +18,9 @@
       <dd><a routerLink="formfield">Form Field</a></dd>
       <dd><a routerLink="slider">Slider</a></dd>
       <dd><a routerLink="sidenav">Sidenav</a></dd>
+      <dd><a routerLink="tree">Tree</a></dd>
+      <dd><a routerLink="dialogoverviewexample">Dialog</a></dd>
+      <dd><a routerLink="layout">Layout</a></dd>
 
     </dl>
   </nav>
